Fixed kerning on mobile

--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -431,6 +431,8 @@ div.contact-icons ul {
 			padding: 10px 0 0 0px;
 		}
 
+		.logo .cursive .fix-me { margin-left:0px; }
+
 		#intro-zombie-img {
 			background: url('../images/zombie-head.png');
 			width: 200px;
